use Symfony2 Forms mecanism to handle computeForm

--- a/src/Acme/CalculatorUIBundle/Resources/translations/messages.en.xliff
+++ b/src/Acme/CalculatorUIBundle/Resources/translations/messages.en.xliff
@@ -50,6 +50,10 @@
                 <source>seo.h1.result</source>
                 <target>Calculator ResultPage V3</target>
             </trans-unit>
+            <trans-unit id="13">
+                <source>operation.impossible</source>
+                <target>Unable to performe this operation</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
